--- a/app/src/main/res/layout/fragment_item_info.xml
+++ b/app/src/main/res/layout/fragment_item_info.xml
@@ -1,62 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="140dp"
-    android:background="@color/teal_200"
-    android:padding="20dp">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/imgIR"
+        android:id="@+id/imgInfo"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/nameTxt"
+        android:id="@+id/nameTxtInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:textColor="@color/black"
         android:text="Name"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/imgIR"
-        app:layout_constraintEnd_toStartOf="@id/statusTxt"/>
+        app:layout_constraintTop_toBottomOf="@id/imgInfo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/statusTxt"
+        android:id="@+id/statusTxtInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:textColor="@color/black"
         android:text="Status"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/nameTxt"
+        app:layout_constraintTop_toBottomOf="@id/nameTxtInfo"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/speciesTxt"
+        android:id="@+id/speciesTxtInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:textColor="@color/black"
         android:text="Species"
-        app:layout_constraintTop_toBottomOf="@id/nameTxt"
-        app:layout_constraintStart_toEndOf="@id/imgIR"
-        app:layout_constraintEnd_toStartOf="@id/statusTxt"/>
+        app:layout_constraintTop_toBottomOf="@id/statusTxtInfo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/locationTxt"
+        android:id="@+id/locationTxtInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:textColor="@color/black"
         android:text="Location"
-        app:layout_constraintTop_toBottomOf="@id/statusTxt"
-        app:layout_constraintStart_toEndOf="@id/speciesTxt"
+        app:layout_constraintTop_toBottomOf="@id/speciesTxtInfo"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
